--- a/style.css
+++ b/style.css
@@ -8,13 +8,12 @@ body{
     justify-content: center;
     align-items: center;
     height: 100vh;
-    margin: 0;
 }
 
 .calculator{
     background: black;
     width: 25rem;
-    padding: 10px
+    padding: 10px;
 }
 
 .calc-display{
@@ -24,7 +23,7 @@ body{
     padding: 10px;
 }
 
-.calc-upper-display{
+#calc-upper-display{
     height: 2rem;
     font-family: Arial, Helvetica, sans-serif;
     text-align: right;
@@ -74,5 +73,4 @@ button{
 #output-display{
     position: relative;
     z-index: 2;
-    text-align: right;
 }
